syntax = "proto3";

import "Common.proto";
import "google/protobuf/timestamp.proto";

package wealth;

option csharp_namespace = "Wealth.InstrumentManagement";


message BondCouponChangedIntegrationEvent {
  BondIdProto bond_id = 1;
  ISINProto ISIN = 2;
  MoneyProto new_coupon = 3;
  google.protobuf.Timestamp occured_on = 4;
}

message StockDividendChangedIntegrationEvent {
  StockIdProto stock_id = 1;
  ISINProto ISIN = 2;
  MoneyProto new_dividend = 3;
  google.protobuf.Timestamp occured_on = 4;
}

message InstrumentPriceChangedIntegrationEvent {
  InstrumentIdProto instrument_id = 1;
  InstrumentTypeProto instrument_type = 2;
  MoneyProto new_price = 3;
  google.protobuf.Timestamp occured_on = 4;
}
